--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.2",
+    "axios": "^0.27.2",
+    "eslint": "^8.16.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
