--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "eslint": "^8.16.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
+    "react-big-calendar": "^0.40.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-quill": "^1.3.5",
