--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-quill": "^1.3.5",
+    "react-mde": "^11.5.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "showdown": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
