--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7",
     "showdown": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
