--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "eslint": "^8.16.0",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-big-calendar": "^0.40.1",
@@ -28,7 +29,8 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
     "showdown": "^2.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
