--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -16,6 +17,7 @@
     "date-fns": "^2.28.0",
     "eslint": "^8.16.0",
     "formik": "^2.2.9",
+    "graphql": "^16.5.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-big-calendar": "^0.40.1",
