--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@headlessui/react": "^1.6.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@splidejs/react-splide": "^0.7.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
