--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-mde": "^11.5.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.7",
+    "redux": "^4.2.0",
     "showdown": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
