--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.16.0",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
+    "mjml": "^4.13.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-big-calendar": "^0.40.1",
