--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.6.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@splidejs/react-splide": "^0.7.8",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
