added more changes

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@date-io/date-fns": "^2.15.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@headlessui/react": "^1.6.2",
+    "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.8.3",
     "@splidejs/react-splide": "^0.7.8",
     "@tailwindcss/forms": "^0.5.2",
@@ -16,9 +18,11 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.2",
     "axios": "^0.27.2",
+    "daisyui": "^2.24.0",
     "date-fns": "^2.28.0",
     "eslint": "^8.16.0",
     "formik": "^2.2.9",
+    "formik-material-ui-pickers": "^1.0.0-alpha.1",
     "graphql": "^16.5.0",
     "mjml": "^4.13.0",
     "react": "^18.1.0",
