--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.2.9",
     "formik-material-ui-pickers": "^1.0.0-alpha.1",
     "graphql": "^16.5.0",
+    "graphql-ws": "^5.11.2",
     "mjml": "^4.13.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
